profile formateur et manager + test unitaire

--- a/src/app/menu/formateur-menu/formateur-menu.component.html
+++ b/src/app/menu/formateur-menu/formateur-menu.component.html
@@ -148,6 +148,10 @@
               class="dropdown-menu dropdown-menu-right navbar-dropdown"
               aria-labelledby="profileDropdown"
             >
+            <a class="dropdown-item" [routerLink]="['/formateur/profile-formateur']">
+              <i class="mdi mdi-account-box-outline text-primary"></i>
+              Mon Profile
+            </a>
               <a class="dropdown-item" [routerLink]="['/formateur/profile']">
                 <i class="mdi mdi-settings text-primary"></i>
                 Mon Compte
