--- a/src/app/menu/manager-menu/manager-menu.component.html
+++ b/src/app/menu/manager-menu/manager-menu.component.html
@@ -147,6 +147,10 @@
             class="dropdown-menu dropdown-menu-right navbar-dropdown"
             aria-labelledby="profileDropdown"
           >
+          <a class="dropdown-item" [routerLink]="['/managerService/profile-manager']">
+            <i class="mdi mdi-account-box-outline text-primary"></i>
+            Mon Profile
+          </a>
             <a class="dropdown-item" [routerLink]="['/managerService/profile']">
               <i class="mdi mdi-settings text-primary"></i>
               Mon Compte
