--- a/src/app/Admin/user-by-id/user-by-id.component.css
+++ b/src/app/Admin/user-by-id/user-by-id.component.css
@@ -1,7 +1,6 @@
-body{
+/* body{
     margin-top:20px;
 }
-/* User Cards */
 .user-box {
     width: 110px;
     margin: auto;
@@ -99,7 +98,6 @@ body{
     color: #808080;
 }
 
-/*Nav Tabs & Pills */
 .nav-tabs .nav-link {
     color: #223035;
 	font-size: 12px;
@@ -420,11 +418,91 @@ body{
     display: block;
     overflow-wrap: break-word;
     word-wrap: break-word;
-    max-width: 150px; /* ajustez la largeur maximale selon vos besoins */
+    max-width: 150px; 
 }
 
 
 .z-depth-3 {
     -webkit-box-shadow: 0 11px 7px 0 rgba(0,0,0,0.19),0 13px 25px 0 rgba(0,0,0,0.3);
     box-shadow: 0 11px 7px 0 rgba(0,0,0,0.19),0 13px 25px 0 rgba(0,0,0,0.3);
+} */
+body {
+    margin-top: 20px;
+}
+
+/* User Cards */
+.user-box {
+    width: 110px;
+    margin: auto;
+    margin-bottom: 10px;
+    margin-top: 15px;
+}
+
+.user-box img {
+    width: 100%;
+    border-radius: 50%;
+    padding: 3px;
+    background: #fff;
+    box-shadow: 0px 5px 25px 0px rgba(0, 0, 0, 0.2);
+}
+
+.profile-card-4 .card {
+    position: relative;
+}
+
+.profile-card-4 .card-body {
+    z-index: 1;
+}
+
+.profile-card-4 .card::before {
+    content: "";
+    position: absolute;
+    top: 0px;
+    right: 0px;
+    left: 0px;
+    border-top-left-radius: .25rem;
+    border-top-right-radius: .25rem;
+    height: 112px;
+    background-color: #e6e6e6;
+}
+
+.profile-card-4 .list-icon {
+    display: table-cell;
+    font-size: 30px;
+    padding-right: 20px;
+    vertical-align: middle;
+    color: #223035;
+}
+
+.profile-card-4 .list-details {
+    display: table-cell;
+    vertical-align: middle;
+    font-weight: 600;
+    color: #223035;
+    font-size: 15px;
+    line-height: 15px;
+}
+
+.profile-card-4 .list-details small {
+    display: table-cell;
+    vertical-align: middle;
+    font-size: 12px;
+    font-weight: 400;
+    color: #808080;
+}
+
+.bg-primary {
+    --bs-bg-opacity: 1;
+    background-color: rgb(116 51 1) !important;
+}
+
+.email-details {
+    display: block;
+    overflow-wrap: break-word;
+    word-wrap: break-word;
+    max-width: 150px;
+}
+
+.z-depth-3 {
+    box-shadow: 0 11px 7px 0 rgba(0, 0, 0, 0.19), 0 13px 25px 0 rgba(0, 0, 0, 0.3);
 }
