--- a/src/app/Collaborateur/Formation/liste-des-formations/liste-des-formations.component.html
+++ b/src/app/Collaborateur/Formation/liste-des-formations/liste-des-formations.component.html
@@ -1,4 +1,7 @@
 <br />
+<div class="col-12 mb-4">
+  <h2 style="font-size: 24px; font-weight: bold; color: #333; margin-bottom: 20px;">Catalogue de formation</h2>
+</div>
 <div class="card-container">
   <ng-container *ngIf="events.length > 0; else noManagerServices">
     <div class="container" *ngFor="let event of events">
